--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "vite_react_shadcn_ts",
-  "private": true,
+  "name": "nebula-frontend",
+  "private": false,
+  "author": "Annany Vishwakarma",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -12,7 +13,6 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
-    "@prisma/client": "^6.5.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -51,7 +51,6 @@
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
-    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
@@ -77,7 +76,6 @@
     "globals": "^15.9.0",
     "lovable-tagger": "^1.1.7",
     "postcss": "^8.4.47",
-    "prisma": "^6.5.0",
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
